# BuildCppLibrary

./: README.md
Source/giflib-5.2.2/: CMakeLists.txt  CMakePresets.json  gif_font.c  giflib.def
Source/sqlite-3.4.6/: CMakeLists.txt
Windows/: BuildEigen.ps1  BuildGDAL.ps1  BuildGEOS.ps1  BuildGifLib.ps1  BuildLibJPEGTurbo.ps1  BuildLibPng.ps1  BuildLibTIFF.ps1  BuildOpenCV.ps1  BuildPROJ.ps1  BuildSQLite.ps1  BuildZLib.ps1
